--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,9 @@
+// Place plugins block first
+plugins {
+    id 'com.google.gms.google-services' version '4.4.2' apply false
+}
+
+// All other configurations come after the plugins block
 allprojects {
     repositories {
         google()
@@ -6,18 +12,12 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
-}
-
-//firebase plugin
-plugins {
-    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
