--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_database: ^11.1.4
   fluttertoast: ^8.2.8
+  google_maps_flutter: ^2.9.0
+  flutter_svg: ^2.0.10+1
+  rive: ^0.13.14
+  rive_animated_icon: ^2.0.1
 
 
 dev_dependencies:
