--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   rive: ^0.13.14
   rive_animated_icon: ^2.0.1
+  geolocator: ^13.0.1
+
 
 
 dev_dependencies:
